--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="bg-gray-50 text-gray-800 font-sans">
     <!-- Hero Section -->
-    <header class="bg-[url('https://images.unsplash.com/photo-1604328698692-f76ea9498e76?auto=format&fit=crop&w=1600&q=80')] bg-cover bg-center text-white py-20">
+    <header>
       <div class="bg-black bg-opacity-60 py-10">
         <h1 class="text-5xl font-bold mb-2">Asian Market</h1>
         <p class="text-xl">Taylors, South Carolina</p>
