--- a/index.html
+++ b/index.html
@@ -7,42 +7,44 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-50 text-gray-800 font-sans">
+
     <!-- Hero Section -->
-    <header>
-      <div class="bg-black bg-opacity-60 py-10">
-        <h1 class="text-5xl font-bold mb-2">Asian Market</h1>
-        <p class="text-xl">Taylors, South Carolina</p>
+    <header class="relative bg-cover bg-center h-screen" style="background-image: url('https://images.unsplash.com/photo-1600891964599-f61ba0e24092?auto=format&fit=crop&w=1950&q=80');">
+      <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col justify-center items-center text-center px-4">
+        <h1 class="text-6xl md:text-7xl font-bold text-white drop-shadow-lg mb-4">Asian Market</h1>
+        <p class="text-xl md:text-2xl text-gray-200">Taylors, South Carolina</p>
+        <a href="#about" class="mt-6 inline-block bg-red-600 hover:bg-red-700 text-white font-semibold py-3 px-6 rounded-lg shadow-lg transition">Learn More</a>
       </div>
     </header>
 
     <!-- About Section -->
-    <section class="max-w-3xl mx-auto py-16 px-4 text-center">
-      <h2 class="text-3xl font-semibold mb-4 text-red-700">About Us</h2>
-      <p class="text-lg leading-relaxed">
+    <section id="about" class="max-w-4xl mx-auto py-20 px-6 text-center">
+      <h2 class="text-4xl font-bold mb-6 text-red-700">About Us</h2>
+      <p class="text-lg md:text-xl leading-relaxed text-gray-700">
         Welcome to <strong>Asian Market Taylors</strong> — your local destination for authentic Asian groceries, snacks, and household essentials.  
         We bring the flavors of Asia closer to your home, with fresh ingredients and products from across the continent.
       </p>
     </section>
 
     <!-- Visit Section -->
-    <section class="bg-red-50 py-16 text-center">
-      <h2 class="text-3xl font-semibold mb-4 text-red-700">Visit Us</h2>
-      <p class="text-lg mb-3">
-        📍 <strong>3245 Wade Hampton Blvd STE A, Taylors, SC 29687</strong>
-      </p>
-      <p class="text-lg mb-3">
-        📞 <strong>(864) 609-0021</strong>
-      </p>
-      <p class="text-lg">
-        ⏰ <strong>Mon–Sat:</strong> 9:30 AM – 7 PM  
-        <br />
-        <strong>Sun:</strong> 9:30 AM – 6 PM
-      </p>
+    <section class="bg-white shadow-md rounded-lg max-w-3xl mx-auto py-16 px-8 my-12 text-center">
+      <h2 class="text-3xl font-semibold mb-6 text-red-700">Visit Us</h2>
+      <div class="text-gray-700 space-y-4 text-lg md:text-xl">
+        <p>📍 <strong>3245 Wade Hampton Blvd STE A, Taylors, SC 29687</strong></p>
+        <p>📞 <strong>(864) 609-0021</strong></p>
+        <p>⏰ <strong>Mon–Sat:</strong> 9:30 AM – 7 PM <br /><strong>Sun:</strong> 9:30 AM – 6 PM</p>
+      </div>
+      <a href="https://goo.gl/maps/your-map-link" target="_blank" class="mt-8 inline-block bg-red-600 hover:bg-red-700 text-white font-semibold py-3 px-6 rounded-lg shadow-lg transition">Get Directions</a>
     </section>
 
     <!-- Footer -->
     <footer class="bg-gray-900 text-gray-300 text-center py-6">
       <p>&copy; 2025 Asian Market Taylors. All rights reserved.</p>
+      <div class="mt-2">
+        <a href="#" class="text-red-500 hover:text-red-400 mx-2 transition">Facebook</a>
+        <a href="#" class="text-red-500 hover:text-red-400 mx-2 transition">Instagram</a>
+      </div>
     </footer>
+
   </body>
 </html>
