--- a/index.html
+++ b/index.html
@@ -32,16 +32,88 @@
       <div class="text-gray-700 space-y-4 text-lg md:text-xl">
         <p>📍 <strong>3245 Wade Hampton Blvd STE A, Taylors, SC 29687</strong></p>
         <p>📞 <strong>(864) 609-0021</strong></p>
+        <p>📠 <strong>(864) 609-0119</strong></p>
         <p>⏰ <strong>Mon–Sat:</strong> 9:30 AM – 7 PM <br /><strong>Sun:</strong> 9:30 AM – 6 PM</p>
       </div>
     </section>
+
+        <!-- Customer Reviews Section -->
+    <section id="reviews" class="bg-gray-100 py-20 px-6">
+      <h2 class="text-4xl font-bold text-center mb-10 text-red-700">What Our Customers Say</h2>
+
+      <div class="relative max-w-5xl mx-auto overflow-hidden">
+        <!-- Slider Container -->
+        <div id="reviewSlider" class="flex transition-transform duration-700 ease-in-out">
+          <!-- Review Card 1 -->
+          <div class="min-w-full px-4">
+            <div class="bg-white shadow-lg rounded-2xl p-8 text-center">
+              <p class="text-lg italic text-gray-700 mb-4">
+                “A great place to shop with many Asian specialties like homemade kimchi and Vietnamese desserts! Their flan puddings and yogurts taste exactly the same as the ones I got in Vietnam. I highly recommend anyone, who wants to try authentic Vietnamese desserts, to go here and shop.”
+              </p>
+              <h3 class="text-xl font-semibold text-red-600">— Hy N.</h3>
+            </div>
+          </div>
+
+          <!-- Review Card 2 -->
+          <div class="min-w-full px-4">
+            <div class="bg-white shadow-lg rounded-2xl p-8 text-center">
+              <p class="text-lg italic text-gray-700 mb-4">
+                “Love this store. The staff/owners are friendly and helpful.”
+              </p>
+              <h3 class="text-xl font-semibold text-red-600">— Stephanie F.</h3>
+            </div>
+          </div>
+
+          <!-- Review Card 3 -->
+          <div class="min-w-full px-4">
+            <div class="bg-white shadow-lg rounded-2xl p-8 text-center">
+              <p class="text-lg italic text-gray-700 mb-4">
+                “I love this little market. They have loads of fresh veggies and herbs. Every kind of sauce or noodles. Great selection and service.”
+              </p>
+              <h3 class="text-xl font-semibold text-red-600">— Rob D.</h3>
+            </div>
+          </div>
+        </div>
+
+        <!-- Navigation Dots -->
+        <div class="flex justify-center mt-6 space-x-2">
+          <button class="dot w-3 h-3 bg-red-400 rounded-full" data-index="0"></button>
+          <button class="dot w-3 h-3 bg-gray-300 rounded-full" data-index="1"></button>
+          <button class="dot w-3 h-3 bg-gray-300 rounded-full" data-index="2"></button>
+        </div>
+      </div>
+    </section>
+
+    <script>
+      // Simple Auto-Sliding Carousel
+      const slider = document.getElementById('reviewSlider');
+      const dots = document.querySelectorAll('.dot');
+      let index = 0;
+
+      function showSlide(i) {
+        slider.style.transform = `translateX(-${i * 100}%)`;
+        dots.forEach(dot => dot.classList.remove('bg-red-400'));
+        dots[i].classList.add('bg-red-400');
+        index = i;
+      }
+
+      dots.forEach(dot => {
+        dot.addEventListener('click', () => showSlide(parseInt(dot.dataset.index)));
+      });
+
+      setInterval(() => {
+        index = (index + 1) % dots.length;
+        showSlide(index);
+      }, 5000); // Auto slide every 5 seconds
+    </script>
+
 
     <!-- Footer -->
     <footer class="bg-gray-900 text-gray-300 text-center py-6">
       <p>&copy; 2025 Asian Market Taylors. All rights reserved.</p>
       <div class="mt-2">
-        <a href="#" class="text-red-500 hover:text-red-400 mx-2 transition">Facebook</a>
-        <a href="#" class="text-red-500 hover:text-red-400 mx-2 transition">Instagram</a>
+        <!-- <a href="#" class="text-red-500 hover:text-red-400 mx-2 transition">Facebook</a>
+        <a href="#" class="text-red-500 hover:text-red-400 mx-2 transition">Instagram</a> -->
       </div>
     </footer>
 
